# augmix

./: .gitignore  README.md  __augmentations.py  augment_and_mix.py  augmentations.py  cifar.py  cifar_config.yaml  imagenet.py  pyproject.toml  requirements.txt
augmix_refactored/: __init__.py  aug_mix_dataset.py  augmentor.py  config.py
augmix_refactored/models/: __init__.py  allconv_net.py  gelu.py
augmix_refactored/script/: cifar.py
augmix_refactored/tools/: __init__.py  argparser_mixin.py  helper.py  simple_yaml_mixin.py  tests.py  trainer.py
augmix_refactored/utils/: dataloader.py  utils.py
docs/: howto.md
job_scripts/: README.md  different_networks.sh
models/cifar/: allconv.py
notebooks/: test.ipynb
slurm/: training_1985665_0.err  training_1985665_0.out
snapshots/: cifar10_wrn_training_log.csv
snapshots/cifar10/densenet/2023-02-13_18:49:29.541772/: training_log.csv
snapshots/cifar10/wrn/2023-02-13_15:54:42.825759/: training_log.csv
snapshots/cifar10/wrn/2023-02-13_16:54:25.363162/: training_log.csv
snapshots/cifar10/wrn/2023-02-13_17:03:24.093972/: training_log.csv
snapshots/cifar10/wrn/2023-02-13_17:12:59.538589/: training_log.csv
snapshots/cifar10/wrn/2023-02-13_18:50:51.877706/: training_log.csv
